fixed side bar had wrong font-weight

--- a/website/static/website/css/fixed_side_bar.css
+++ b/website/static/website/css/fixed_side_bar.css
@@ -22,7 +22,6 @@
   font-size: 14px;
   margin-bottom: 0;
   padding-bottom: 0;
-  font-weight: normal;
 }
 
 #filter-bar li {
